--- a/site/index.html
+++ b/site/index.html
@@ -1,14 +1,11 @@
 <HTML>
  <HEAD>
 
-
-<link type="text/css" rel="stylesheet" href="/static/css/banner-styles.css"/>
-
-
  <TITLE>Ethereal binary with H.323 support</TITLE>
  <LINK REL=STYLESHEET HREF="ethereal.css" TYPE="text/css">
  </HEAD>
  <BODY>
+
 
 
   <table width="100%" class=index border=0 cellspacing=0>
@@ -57,19 +54,48 @@
    was already used in Ethereal, I also changed the existing RTP and RTCP 
    (RFC 1889) dissectors to suit my needs. I changed an existing ASN.1 
    compiler from the OpenH323 project to generate source to be used in 
-   Ethereal. I graduated on this project with very high grade and received my 
-   diploma :-).
+   Ethereal. 
   </p>
   <p>
-   The executable that can be downloaded from this page is capable of decoding H.323
-   (Voice over IP standard) messages. Unfortunately, due to linking problems, currently I 
-   can't get it to work on Linux or any other *nix.
+   At this site you can download Ethereal in two varieties. The source is 
+   available for those that run Linux or for those running Windows who want to 
+   know how it all works. For those who want to download a binary, I have only 
+   got a Windows version available.
   </p>
   <h2>News</h2>
+  <p>
+   14-8-01<br>
+   The faststart and H.245 tunneling capability has been improved. In Help/About 
+   you can now see that this version of Ethereal supports H.323. No source 
+   update (yet). A collegue of mine has created an Installshield setup. (hi Hans!) 
+  </p>
+  <p>
+   6-7-01<br>
+   The H.323 capable Ethereal now supports Faststart and H.245 tunneling. No 
+   upgrade to Ethereal 0.8.18 yet. The source you can download at this site 
+   has NOT been updated. I will have to really spend some time making a working 
+   Linux source, because at the moment it doesn't work. Windows version should 
+   still work.
+  </p>
+  <p>
+   9-4-01<br>
+   The H.323 version of Ethereal is now also available for Linux! Go to the 
+   source page and find out how to get it to work. There was also an 
+   embarassing spelling mistake I removed (did I just make one?)
+  </p>
   <p>
    15-1-01<br>
    I think I have nailed the one big issue my H.323 dissector had. The problem was that 
    not all Call Signalling related trafiic was going to / from port 1720. When I wrote 
+   the dissector last year, I had no idea that a lot of people would run into this 
+   problem. I think I have now solved it using a heuristic dissector. It should solve all 
+   problems related to capturing direct endpoint to endpoint traffic and traffic to some 
+   gateways.
+  </p>
+  <p>
+   14-1-01<br>
+   I think I have nailed the one big issue my H.323 dissector had. The problem was that 
+   not all Call Signalling related traffic was going to / from port 1720. When I wrote 
    the dissector last year, I had no idea that a lot of people would run into this 
    problem. I think I have now solved it using a heuristic dissector. It should solve all 
    problems related to capturing direct endpoint to endpoint traffic and traffic to some 
@@ -102,38 +128,32 @@
   </p>
   <h2>Download</h2>
   <p>
-   Download the <a href="bin/ethereal.zip">Win32 executable</a> (1.3 megabyte) or the 
-   <a href="bin/tethereal.zip">textmode</a> variant.<br>
-   You'll also need the <a href="bin/glib_gtk.zip">GTK for windows</a> DLL's (1.1 megabyte).<br>
-   <br>
-   To get Ethereal working, see the <a href="/web/20010406001041/http://www.ethereal.com/distribution/win32/win32-README.txt">instructions</a> on the Ethereal site.
+   Download the <a href="bin/ethereal.exe">Win32 executable</a> (0.9 megabyte).<br>
+   Don't download this file if you want to run this version of Ethereal for 
+   the first time, use the link below.<br>
   </p>
   <p>
-   If you want to capture with Ethereal, you'll also need to install a 
-   <a href="/web/20010406001041/http://netgroup-serv.polito.it/winpcap/">packet driver</a>.
+   Download the <a href="bin/setup.exe">InstallShield Setup</a> (3.5 megabyte).<br>
+   This will install the required DLL's and will also try to install the WinPCAP
+   drivers which enable you to capture network traffic.
+  </p>
+  <p>
+   Linux users go to the source page.
   </p>
   <p>
    <a href="source/index.html">The source</a> is also available.
   </p>
   <h2>Known issues</h2>
   <p>
-   The biggest issue that I know of has to do with an unfortunate part of the protocol, random 
-   ports. It is possible to not only see H.245 traffic going from/to random ports, but 
-   also H.225.0 Call Signalling traffic. I have seen this behaviour with gateways, but 
-   others have also seen this with terminals. There's no easy solution, but I'm working on 
-   it.
-  </p>
-  <p>
-   Update!<br>
-   I think I have nailed it.
+   At the moment, none! 
   </p>
   <h2>Links</h2>
   <p>
    <ul>
-    <li><a href="/web/20010406001041/http://www.ethereal.com/">Ethereal</a></li>
-    <li><a href="/web/20010406001041/http://www.openh323.org/">OpenH323</a>, the creators of the library that the dissector is based on</li>
-    <li><a href="/web/20010406001041/http://www.databeam.com/h323/h323primer.html">An H.323 primer</a></li>
-    <li><a href="/web/20010406001041/http://people.itu.int/~jonesp/iptel/h323/">Another primer</a></li>
+    <li><a href="/web/20010929203040/http://www.ethereal.com/">Ethereal</a></li>
+    <li><a href="/web/20010929203040/http://www.openh323.org/">OpenH323</a>, the creators of the library the H.323 dissector is based on</li>
+    <li><a href="/web/20010929203040/http://www.databeam.com/h323/h323primer.html">An H.323 primer</a></li>
+    <li><a href="/web/20010929203040/http://people.itu.int/~jonesp/iptel/h323/">Another primer</a></li>
    </ul>
   </p>
   <center>
@@ -185,15 +205,15 @@
     </td>
     <td width="12%" align="right">
      <!-- Start of NedStat Basic code -->
-      <a href="/web/20010406001041/http://nl.nedstatbasic.net/cgi-bin/viewstat?name=ethereal_h323">
-       <img src="/web/20010406001041im_/http://nl.nedstatbasic.net/cgi-bin/nedstat.gif?name=ethereal_h323" border=0 alt="" nosave width=22 height=22>
+      <a href="/web/20010929203040/http://nl.nedstatbasic.net/cgi-bin/viewstat?name=ethereal_h323">
+       <img src="/web/20010929203040im_/http://nl.nedstatbasic.net/cgi-bin/nedstat.gif?name=ethereal_h323" border=0 alt="" nosave width=22 height=22>
       </a>
      <!-- End of NedStat Basic code -->
      <!-- Start of ReferStat -->
       <script type="text/javascript" language="JavaScript">
        <!--
          d=document;
-         d.write("<img src=\"/web/20010406001041/http://nl.nedstatbasic.net");
+         d.write("<img src=\"/web/20010929203040/http://nl.nedstatbasic.net");
          d.write("/cgi-bin/referstat.gif?");
          d.write("name=ethereal_h323&refer=");
          d.write(escape(top.document.referrer));
