--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,9 @@
 <HTML>
  <HEAD>
- <TITLE>H.323 for Ethereal</TITLE>
+ <TITLE>H.323 plugin for Ethereal</TITLE>
  <LINK REL=STYLESHEET HREF="ethereal.css" TYPE="text/css">
  </HEAD>
  <BODY>
-
 
   <table width="100%" class=index border=0 cellspacing=0>
    <tr>
@@ -17,7 +16,7 @@
     <td width="12%" align=center>
      &nbsp;
     </td>
-    <td width="16%" align=center class=current>
+    <td width="16%" align=center>
      &nbsp;
     </td>
     <td width="12%" align=center>
@@ -43,115 +42,53 @@
    </tr>
   </table>
 
-  <h1 align="center">H.323 for Ethereal</h1>
+  <h1 align="center">H.323 plugin for Ethereal</h1>
   <h2>Preface</h2>
   <p>
-   This project was done by me from February to June 2000 at Philips Business
-   Communications in Hilversum. They asked me to create a network sniffer
-   which could decode H.323 traffic. I changed the Q.931 dissector which
-   was already used in Ethereal, I also changed the existing RTP and RTCP
-   (RFC 1889) dissectors to suit my needs. I changed an existing ASN.1
-   compiler from the OpenH323 project to generate source to be used in
-   Ethereal. Since March 2002 the H.323 is supplied as a plugin for Ethereal
-   in stead of a binary.
+   This project started in February 2000, when I started to work for
+   <a href="/web/20020525060228/http://www.sopho.philips.com/">Philips Business Communications</a> in Hilversum,
+   the Netherlands. They asked me to create a network sniffer which was able to decode
+   H.323 traffic, while I was getting practival experience for my study,
+   <a href="/web/20020525060228/http://www.engineering.tech.nhl.nl/hi/">Computer Science</a>.
   </p>
   <p>
-   If you want more information, checkout the <a href="/web/20020401232422/http://sourceforge.net/projects/ethereal-h323-p/">Sourceforge</a> site.
+   After some objective multiple criteria analysis (yeah, right), I decided to
+   focus on <a href="/web/20020525060228/http://www.ethereal.com/">Ethereal</a> and
+   <a href="/web/20020525060228/http://www.openh323.org/">OpenH323</a>. I changed the existing Q.931
+   dissector which was already used in Ethereal, then I also changed (well, rewrote)
+   the existing RTP and RTCP (RFC 1889) dissectors to suit my needs. I changed the
+   existing ASN.1 compiler from the OpenH323 project to generate source to be used in
+   an Ethereal disector. Since March 2002 the H.323 support is supplied as a plugin
+   for Ethereal instead of a binary.
+  </p>
+  <p>
+   Since March 2002, this project is available on Sourceforge. If you'd like to have
+   more information, checkout the <a href="/web/20020525060228/http://sourceforge.net/projects/ethereal-h323-p/">Sourceforge</a> site.
   </p>
   <h2>News</h2>
   <p>
+   19-04-02<br>
+   I have removed the old news, it was confusing some people, because sometimes I did
+   have Linux support and other times I didn't. People were requesting it when I already
+   had it and wanted to download it when I didn't. <br>
+   I added a new preface and moved the CallFlow download also to Sourceforge. I didn't
+   create a new project for it, because it is very close to the plugin. I also added
+   icotoprc, which has nothing to do with the plugin itself, it's just a quick hack
+   for some problem I had, and to make it available to everyone I quickly hacked it
+   together as a release in this project ;-)
+  </p>
+  <p>
    25-03-02<br>
-   I have created a <a href="/web/20020401232422/http://sourceforge.net/projects/ethereal-h323-p/">project</a>
-   at <a href="/web/20020401232422/http://sourceforge.net/">Sourceforge</a>. Now you can subscribe to
-   <a href="/web/20020401232422/http://sourceforge.net/mail/?group_id=49311">mailinglists</a>,
-   <a href="/web/20020401232422/http://sourceforge.net/tracker/?group_id=49311">submit bugs</a> and
-   <a href="/web/20020401232422/http://sourceforge.net/project/showfiles.php?group_id=49311">download</a>
+   I have created a <a href="/web/20020525060228/http://sourceforge.net/projects/ethereal-h323-p/">project</a>
+   at <a href="/web/20020525060228/http://sourceforge.net/">Sourceforge</a>. Now you can subscribe to
+   <a href="/web/20020525060228/http://sourceforge.net/mail/?group_id=49311">mailinglists</a>,
+   <a href="/web/20020525060228/http://sourceforge.net/tracker/?group_id=49311">submit bugs</a> and
+   <a href="/web/20020525060228/http://sourceforge.net/project/showfiles.php?group_id=49311">download</a>
    from Sourceforge. The website will remain at voice2sniff.
-  </p>
-   <p>
-   15-02-02<br>
-   New version of the source! The Windows executable and the source are now back
-   in-sync. I don't want to know how long it took me....
-  </p>
-  <p>
-   31-01-02<br>
-   Changed the pages a little, added a patch for Unix, now the source should
-   build more easily. Also changed the Unix build instructions, forgot that
-   the tarball has one subdir to many... As far as I know the source will
-   now compile on Linux and Solaris.
-  </p>
-  <p>
-   28-01-02<br>
-   A couple of weeks ago I already announced on OpenH323 that I have a new
-   <a href="callflow/index.html">tool</a>, but I didn't add a very clear link on it from this page. So I
-   thought I'd do it now
-  </p>
-  <p>
-   14-08-01<br>
-   The faststart and H.245 tunneling capability has been improved. In Help/About
-   you can now see that this version of Ethereal supports H.323. No source
-   update (yet). A collegue of mine has created an Installshield setup. (hi Hans!)
-  </p>
-  <p>
-   6-07-01<br>
-   The H.323 capable Ethereal now supports Faststart and H.245 tunneling. No
-   upgrade to Ethereal 0.8.18 yet. The source you can download at this site
-   has NOT been updated. I will have to really spend some time making a working
-   Linux source, because at the moment it doesn't work. Windows version should
-   still work.
-  </p>
-  <p>
-   9-04-01<br>
-   The H.323 version of Ethereal is now also available for Linux! Go to the
-   source page and find out how to get it to work. There was also an
-   embarassing spelling mistake I removed (did I just make one?)
-  </p>
-  <p>
-   15-01-01<br>
-   I think I have nailed the one big issue my H.323 dissector had. The problem was that
-   not all Call Signalling related trafiic was going to / from port 1720. When I wrote
-   the dissector last year, I had no idea that a lot of people would run into this
-   problem. I think I have now solved it using a heuristic dissector. It should solve all
-   problems related to capturing direct endpoint to endpoint traffic and traffic to some
-   gateways.
-  </p>
-  <p>
-   14-01-01<br>
-   I think I have nailed the one big issue my H.323 dissector had. The problem was that
-   not all Call Signalling related traffic was going to / from port 1720. When I wrote
-   the dissector last year, I had no idea that a lot of people would run into this
-   problem. I think I have now solved it using a heuristic dissector. It should solve all
-   problems related to capturing direct endpoint to endpoint traffic and traffic to some
-   gateways.
-  </p>
-  <p>
-   13-01-01<br>
-   Wow, within a day another release.... I have found a small TPKT/Q.931 problem and I have
-   updated the website. I have not updated the executable yet, because uploading >3
-   megabyte each evening costs me too much money, so I'll have to do it from work.
-  </p>
-  <p>
-   13-01-01<br>
-   Finally, a new version! This solves no big issues, but the source is now for Ethereal
-   version 0.8.15. As always, there's an executable to download and I have also made
-   available Tethereal, which is the textmode variant of Ethereal. This site has also changed
-   a little, the zip files are in a different place and the compile instructions have
-   changed.
-  </p>
-  <p>
-   26-09-00<br>
-   Another new version of the executable, this solves ANOTHER Q.931 / TPKT related bug.
-   This version should also support Gatekeeper discovery (GRQ) using multicast.
-  </p>
-  <p>
-   20-09-00<br>
-   There's a new version of the executable available for download. There was a bug in
-   the TPKT handling by the Q.931 dissector. This release also fixes another TPKT bug
-   I fixed earlier, where the TPKT header was sometimes displayed twice.
   </p>
   <h2>Download</h2>
   <p>
-   The <a href="/web/20020401232422/http://sourceforge.net/project/showfiles.php?group_id=49311">downloads</a>
+   The <a href="/web/20020525060228/http://sourceforge.net/project/showfiles.php?group_id=49311">downloads</a>
    for the Ethereal plugin are now hosted by Sourceforge.
   </p>
   <h2>CallFlow</h2>
@@ -166,10 +103,10 @@
   <h2>Links</h2>
   <p>
    <ul>
-    <li><a href="/web/20020401232422/http://www.ethereal.com/">Ethereal</a></li>
-    <li><a href="/web/20020401232422/http://www.openh323.org/">OpenH323</a>, the creators of the library the H.323 dissector is based on</li>
-    <li><a href="/web/20020401232422/http://www.databeam.com/h323/h323primer.html">An H.323 primer</a></li>
-    <li><a href="/web/20020401232422/http://people.itu.int/~jonesp/iptel/h323/">Another primer</a></li>
+    <li><a href="/web/20020525060228/http://www.ethereal.com/">Ethereal</a></li>
+    <li><a href="/web/20020525060228/http://www.openh323.org/">OpenH323</a>, the creators of the library the H.323 dissector is based on</li>
+    <li><a href="/web/20020525060228/http://www.databeam.com/h323/h323primer.html">An H.323 primer</a></li>
+    <li><a href="/web/20020525060228/http://people.itu.int/~jonesp/iptel/h323/">Another primer</a></li>
    </ul>
   </p>
   <center>
@@ -179,8 +116,8 @@
   <table width="100%" class=index border=0 cellspacing=0>
    <tr>
     <td width="12%" align="left">
-     <a href="/web/20020401232422/http://sourceforge.net/projects/ethereal-h323-p/">
-      <img src="/web/20020401232422im_/http://sourceforge.net/sflogo.php?group_id=49311&amp;type=1"
+     <a href="/web/20020525060228/http://sourceforge.net/projects/ethereal-h323-p/">
+      <img src="/web/20020525060228im_/http://sourceforge.net/sflogo.php?group_id=49311&amp;type=1"
            border="0" alt="SourceForge.net Logo">
      </a>
     </td>
@@ -225,16 +162,16 @@
     <td width="12%" align="right">
       <!-- Begin Nedstat Basic code -->
       <!-- Title: Ethereal H.323 version -->
-      <!-- URL: /web/20020401232422/http://voice2sniff.org/index.html -->
-      <script language="JavaScript" src="/web/20020401232422js_/http://m1.nedstatbasic.net/basic.js"></script>
+      <!-- URL: /web/20020525060228/http://voice2sniff.org/index.html -->
+      <script language="JavaScript" src="/web/20020525060228js_/http://m1.nedstatbasic.net/basic.js"></script>
       <script language="JavaScript">
         <!--
           nedstatbasic("AAr2qwKzQMS3EK1GGI7CWwC9X5bA", 0);
         // -->
       </script>
       <noscript>
-        <a target="_blank" href="/web/20020401232422/http://v1.nedstatbasic.net/stats?AAr2qwKzQMS3EK1GGI7CWwC9X5bA">
-          <img src="/web/20020401232422im_/http://m1.nedstatbasic.net/n?id=AAr2qwKzQMS3EK1GGI7CWwC9X5bA" border="0" nosave  width="18" height="18">
+        <a target="_blank" href="/web/20020525060228/http://v1.nedstatbasic.net/stats?AAr2qwKzQMS3EK1GGI7CWwC9X5bA">
+          <img src="/web/20020525060228im_/http://m1.nedstatbasic.net/n?id=AAr2qwKzQMS3EK1GGI7CWwC9X5bA" border="0" nosave  width="18" height="18">
         </a>
       </noscript>
       <!-- End Nedstat Basic code -->
@@ -244,3 +181,4 @@
 
  </BODY>
 </HTML>
+
